# rentsplitter

./: LICENSE.md  README.md  index.html
assets/: index-BC0YPNlj.js  index-BcH32-26.js  index-C4Azjg6P.css  index-Cfge0fuy.js  index-DD7z6eC1.css
server/: README.md  pyproject.toml
server/app/: app.py  models.py  start.py
ui/: .env.production  components.d.ts  eslint.config.js  index.html  package.json  vite.config.ts
ui/src/: App.vue  apiConnect.ts  constants.ts  main.ts  style.css
ui/src/components/: AboutSection.vue  HelloWorld.vue  MainController.vue  StartScreen.vue  WelcomeScreen.vue
