[tool.poetry]
name = "app"
version = "0.1.0"
description = "Server for the RentSplitter app"
authors = ["Sam Gilman <samsgilman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
redis = "^5.0.9"
flask-cors = "^5.0.0"
gunicorn = "^23.0.0"
redis-om = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
